some basic views

--- a/EyeZapApp/EyeZapApp.csproj
+++ b/EyeZapApp/EyeZapApp.csproj
@@ -32,6 +32,13 @@
   <ItemGroup>
     <Compile Include="EyeZapApp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\LoginPage.cs" />
+    <Compile Include="Controllers\LoginController.cs" />
+    <Compile Include="Views\HomePage.cs" />
+    <Compile Include="Views\SummaryPage.cs" />
+    <Compile Include="Views\SkillsPage.cs" />
+    <Compile Include="Views\PathPage.cs" />
+    <Compile Include="Views\UploadPage.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.1.3.3.6323\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.1.3.3.6323\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
@@ -45,5 +52,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Views\" />
+    <Folder Include="Controllers\" />
   </ItemGroup>
 </Project>
