--- a/iOS/packages.config
+++ b/iOS/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Acr.Support" version="1.1.1" targetFramework="xamarinios10" />
+  <package id="Acr.UserDialogs" version="4.2.1" targetFramework="xamarinios10" />
   <package id="Newtonsoft.Json" version="8.0.2" targetFramework="xamarinios10" />
+  <package id="Splat" version="1.6.2" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="2.0.1.6505" targetFramework="xamarinios10" />
   <package id="Xamarin.TestCloud.Agent" version="0.18.0" targetFramework="xamarinios10" />
 </packages>
