--- a/EyeZapApp/EyeZapApp.csproj
+++ b/EyeZapApp/EyeZapApp.csproj
@@ -37,7 +37,6 @@
     <Compile Include="Views\HomePage.cs" />
     <Compile Include="Views\SummaryPage.cs" />
     <Compile Include="Views\SkillsPage.cs" />
-    <Compile Include="Views\PathPage.cs" />
     <Compile Include="Views\SkillPage.cs" />
     <Compile Include="Views\SkillVideoPage.cs" />
     <Compile Include="Views\SkillFlashcardPage.cs" />
@@ -46,6 +45,14 @@
     <Compile Include="Controllers\SkillsController.cs" />
     <Compile Include="Config.cs" />
     <Compile Include="Controllers\AssessmentController.cs" />
+    <Compile Include="Views\PerformancePage.cs" />
+    <Compile Include="Views\VideoListPage.cs" />
+    <Compile Include="Views\FlashcardListPage.cs" />
+    <Compile Include="Views\PathologyPage.cs" />
+    <Compile Include="Controllers\PathologyController.cs" />
+    <Compile Include="Views\MultipleChoiceQuestion.cs" />
+    <Compile Include="Views\PathFlashcardPage.cs" />
+    <Compile Include="Views\PathListPage.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.2.0.1.6505\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.2.0.1.6505\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
